fix: styles media qeries width overflow on page components and Aboutus

--- a/src/app/about-us/AboutUs.module.css
+++ b/src/app/about-us/AboutUs.module.css
@@ -54,7 +54,8 @@
     flex-direction: row;
     list-style-type: none;
     font-size: 1rem;
-    width: 100%;
+    margin: 100px 0;
+    padding: 0;
 
   
 }
@@ -132,7 +133,16 @@
 
     .title{
         font-size: 2rem;
+        margin-bottom: 2rem;   }
+    .list{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-top: 1rem;
+        align-items: center;
+        justify-content: space-evenly;
+        margin-top: 10rem;
     }
+
 
    
 }
@@ -147,6 +157,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         margin-top: 1rem;
+        margin-left: 0;
         align-items: center;
         justify-content: space-evenly;
         } 
