--- a/src/app/store/Store.module.css
+++ b/src/app/store/Store.module.css
@@ -193,7 +193,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 94%;
     padding: 1rem;
     
 }
